design: Alarm Popup 퍼블리싱

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tiptap/extension-placeholder": "^2.10.2",
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
+    "floe-frontend": "file:",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
