--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tiptap/extension-placeholder": "^2.10.2",
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
+    "axios": "^1.7.9",
     "floe-frontend": "file:",
     "next": "15.0.3",
     "react": "^18.2.0",
