--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "floe-frontend": "file:",
     "next": "15.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
