--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "floe-frontend": "file:",
     "next": "15.0.3",
     "react": "^18.2.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
