--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "floe-frontend": "file:",
     "next": "15.0.3",
+    "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.2.0"
